fix z-index and logo

--- a/app/public/stylesheets/sidemenu.css
+++ b/app/public/stylesheets/sidemenu.css
@@ -1,12 +1,10 @@
 #menu-button {
 	margin: 0 auto;
-/*	width:  200px;*/
 	height: 54px;
 	display: inline-block;
-	position: absolute;
+	position:fixed;
 	top: 0px;
 	left: 26px;
-	z-index: 99998;
 }
 
 .sidebar-nav-fixed {
@@ -14,7 +12,6 @@
 	top:64px;
 	left:25px;
 	width: 160px;
-	z-index: 99998;
 }
 
 .bs-sidenav {
